--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,7 +2,7 @@
 <resources>
 
     <string name="hello">HELLO ANDROID,FIRST APP</string>
-    <string name="app_name">JLSTutorial</string>
+    <string name="app_name">DEPProject</string>
     <string name="googleMap_API">0mP_T2GuPlWvlLuDJl1O4mKycdielHLwt-mvzQA</string>
     <string name="retriveButton">定位現在所在位址</string>
 
