add menu to replace buttom adding animate to slide down yearSeekbar

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,5 @@
 	<string name="app_name">DEPProject</string>
     <string name="googleMap_API">0mP_T2GuPlWvlLuDJl1O4mKycdielHLwt-mvzQA</string>
     <string name="retriveButton">定位現在所在位址</string>
-
+	<string name="historytimeline">歷史時間軸</string>
 </resources>
