--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -5,5 +5,10 @@
     <string name="googleMap_API">0mP_T2GuPlWvlLuDJl1O4mKycdielHLwt-mvzQA</string>
     <string name="retriveButton">定位現在所在位址</string>
 	<string name="historytimeline">歷史時間軸</string>
+	<string name="nfc_passport">NFC護照</string>
 	<string name="distance_spinner_prompt">按此選取搜尋距離（預設：中）</string>
+	
+	<string name="get_started">To get started, log in using Facebook</string>
+	<string name="app_fb_id">273315202770124</string>
+	
 </resources>
