--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -7,7 +7,7 @@
 	<string name="historytimeline">歷史時間軸</string>
 	<string name="nfc_passport">NFC護照</string>
 	<string name="distance_spinner_prompt">按此選取搜尋距離（預設：中）</string>
-	
+	<string name="pushInButtom">新增戳章</string>
 	<string name="get_started">To get started, log in using Facebook</string>
 	<string name="app_fb_id">273315202770124</string>
 	
